<resources>
    <string name="app_name">Clouds</string>
    <string name="main_fragment_label">@string/app_name</string>
    <string name="detail_fragment_label">Detail Fragment</string>
    <string name="listTitle">Itemtitle</string>
    <string name="listToolsId">3012</string>
    <string name="listToolsUsername">muster_user_name</string>
    <string name="idTitle">ID:</string>
    <string name="usernameTitle">Username:</string>
    <string name="profile_image_description">profile image</string>
    <string name="detail_phone_number">Phone Number:</string>
    <string name="detail_gender">Gender:</string>
    <string name="detail_email">Email:</string>
    <string name="detail_name">Name:</string>
    <string name="detail_employment_title">Emplyment Title:</string>
    <string name="logo_description">Logo</string>
    <string name="cloud_height_meter_label">Wolkenhöhe:</string>
    <string name="cloud_visibility_label">Sichtweite:</string>
    <string name="no_data">-</string>
    <string name="cloud_height_feet_label">in feet:</string>
    <string name="cloud_opacity_label">Bewölkung:</string>
    <string name="standar_location_switch">Hamburg</string>
    <string name="aktuelle_pos_switch">Aktuelle Position</string>
    <string name="saving_info">Drücke lange auf Zuhause und es wird die aktuelle Wetterstation als neues Zuahuse gespeichert</string>
    <string name="home">Zuhause:</string>
    <string name="max">(max)</string>
    <string name="open_website">open website</string>
    <string name="no_planes">Keine Flugzeuge in einem Radius von 20km in der Luft</string>
    <string name="icao">ICAO:</string>
    <string name="callsign">Callsign:</string>
    <string name="entfernung">Entfernung:</string>
    <string name="typ">Typ:</string>
    <string name="fluggesellschaft">Fluggesellschaft:</string>
    <string name="height">Flughöhe</string>
    <string name="height_meter">Flughöhe in Meter</string>
    <string name="height_feet">Flughöhe in Feet</string>
    <string name="open_fr24">Öffne Flightradar24</string>
</resources>