<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:srcCompat="@drawable/no_plane_found" />


    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="?android:attr/listDivider" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/detail_titles_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/two_grid_unit"
            android:orientation="vertical">

            <TextView
                android:id="@+id/icao_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_grid_unit"
                android:layout_marginBottom="1dp"
                android:text="@string/icao" />

            <TextView
                android:id="@+id/callsign_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_grid_unit"
                android:layout_marginBottom="1dp"
                android:text="@string/callsign" />

            <TextView
                android:id="@+id/distance_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_grid_unit"
                android:layout_marginBottom="1dp"
                android:text="@string/entfernung" />

            <TextView
                android:id="@+id/height_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_grid_unit"
                android:layout_marginBottom="1dp"
                android:text="@string/height" />

            <TextView
                android:id="@+id/plane_type_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_grid_unit"
                android:layout_marginBottom="1dp"
                android:text="@string/typ" />

            <TextView
                android:id="@+id/company_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_grid_unit"
                android:layout_marginBottom="1dp"
                android:text="@string/fluggesellschaft" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/two_grid_unit"
            android:layout_marginStart="@dimen/two_grid_unit"
            android:orientation="vertical">

            <TextView
                android:id="@+id/icao_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/two_grid_unit"
                android:text="@string/no_data"
                tools:text="B3K127" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/callsign_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:text="@string/no_data"
                tools:text="LH237" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/distance_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:text="@string/no_data"
                tools:text="3 km" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/height_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:text="@string/no_data"
                tools:text="4000ft" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/plane_type_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:text="@string/no_data"
                tools:text="A320" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:background="?android:attr/listDivider" />

            <TextView
                android:id="@+id/company_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:text="@string/no_data"
                tools:text="Luftahnsa" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/one_grid_unit"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>