<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefreshMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cloud_opacity_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/two_grid_unit"
                    android:layout_toStartOf="@+id/cloud_opacity_data"
                    android:text="@string/cloud_opacity_label"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/cloud_opacity_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/two_grid_unit"
                    android:layout_marginEnd="@dimen/two_grid_unit"
                    android:text="@string/no_data"
                    android:textSize="24sp"
                    tools:text="20 %" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/cloud_opacity_title"
                    android:background="?android:attr/listDivider" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cloud_height_title_meter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/two_grid_unit"
                    android:layout_marginStart="@dimen/two_grid_unit"
                    android:layout_marginEnd="122dp"
                    android:layout_toStartOf="@+id/cloud_height_data_feet"
                    android:text="@string/cloud_height_meter_label"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/cloud_height_data_feet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/two_grid_unit"
                    android:text="@string/no_data"
                    android:textSize="24sp"
                    tools:text="1377,936 ft" />

                <TextView
                    android:id="@+id/cloud_height_data_meter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/cloud_height_data_feet"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/two_grid_unit"
                    android:layout_marginBottom="@dimen/two_grid_unit"
                    android:text="@string/no_data"
                    android:textSize="14sp"
                    tools:text="420,0 m" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/cloud_height_data_meter"
                    android:background="?android:attr/listDivider" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/cloud_visibility_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/two_grid_unit"
                    android:layout_toStartOf="@+id/cloud_visibility_data"
                    android:text="@string/cloud_visibility_label"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/cloud_visibility_data"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/two_grid_unit"
                    android:text="@string/no_data"
                    android:textSize="24sp"
                    tools:text="10,5 km" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_below="@+id/cloud_visibility_title"
                    android:background="?android:attr/listDivider" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingHorizontal="@dimen/two_grid_unit"
                android:weightSum="3">

                <RelativeLayout
                    android:id="@+id/home_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:longClickable="true">

                    <TextView
                        android:id="@+id/home_location_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/home"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/home_location_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/home_location_title"
                        android:layout_marginTop="@dimen/one_grid_unit"
                        android:text="@string/standar_location_switch"
                        android:textSize="16sp" />
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:id="@+id/switch_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_margin="@dimen/one_grid_unit" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/aktuelle_pos_switch"
                    android:textAlignment="textEnd"
                    android:textSize="16sp"
                    tools:ignore="RtlCompat" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="?android:attr/listDivider" />

            <LinearLayout
                android:id="@+id/info_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/saving_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/two_grid_unit"
                    android:layout_marginVertical="@dimen/one_grid_unit"
                    android:text="@string/saving_info"
                    android:textSize="12sp" />

                <View
                    android:id="@+id/info_view"
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="?android:attr/listDivider" />
            </LinearLayout>

            <TextView
                android:id="@+id/tempData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <WebView
                android:id="@+id/webview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:visibility="gone" />
        </LinearLayout>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</androidx.constraintlayout.widget.ConstraintLayout>